--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-	"version":2,
-	"builds":[
-		{
-			"src":"*.js",
-			"use":"@vercel/node"
-		}
-	],
-	"routes":[
-		{
-			"src":"/(.*)",
-			"dest":"/"
-		}
-	]
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js", // Change this to your actual entry point
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "server.js" // Ensure this matches the entry point file
+    }
+  ]
 }
