--- a/package.json
+++ b/package.json
@@ -4,21 +4,17 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "aneesh",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.57.1",
     "pdf-parse": "^1.1.1"
-  },
-  "engines": {
-    "node": "18.x"
   }
-}
-
 }
