--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "linkedin-jobs-api": "^1.0.4",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.57.1",
     "pdf-parse": "^1.1.1"
