--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "linkedin-jobs-api": "^1.0.4",
+    "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.57.1",
     "pdf-parse": "^1.1.1"
